# fmo-calculations

./: ClassExciton.py  ClassExciton1.py  ExcitonDisorder.py  HamiltonBrixner.xlsx  HamiltonKell.xlsx  LICENSE  README.md  dimer.xlsx  exciton-FMO-.py  exciton.py  fmo-excitons.py  pyproject.toml  trimer.xlsx
